Add root variables

--- a/easy-product-card/product-preview-card-component-main/styles.css
+++ b/easy-product-card/product-preview-card-component-main/styles.css
@@ -5,3 +5,19 @@
   margin: 0;
   padding: 0;
 }
+
+:root {
+  --primary-cream: hsl(30, 38%, 92%);
+  --primary-dark-cyan: hsl(158, 36%, 37%);
+  --neutral-dark-blue: hsl(212, 21%, 14%);
+  --neutral-gray-blue: hsl(228, 12%, 48%);
+  --neutral-white: hsl(0, 0%, 100%);
+
+  --paragraph-text: 14px;
+}
+
+main {
+  height: 100vh;
+  width: 100vw;
+  background-color: var(--primary-cream);
+}
