--- a/easy-news-homepage/news-homepage-main/styles/css/styles.css
+++ b/easy-news-homepage/news-homepage-main/styles/css/styles.css
@@ -189,4 +189,39 @@ p {
   color: hsl(36deg, 100%, 99%);
 }
 
+.new-articles {
+  width: 100%;
+  padding: 0 1.5rem;
+  margin-top: 6rem;
+}
+.new-articles__wrapper {
+  width: 100%;
+  padding: 2rem 3rem;
+  background-color: hsl(240deg, 100%, 5%);
+}
+.new-articles__header {
+  color: hsl(35deg, 77%, 62%);
+  font-size: 2.4rem;
+}
+.new-articles__list {
+  padding-top: 1.5rem;
+}
+.new-articles__item {
+  list-style: none;
+}
+.new-articles .border {
+  padding-top: 2rem;
+  border-bottom: 1px solid hsl(236deg, 13%, 42%);
+}
+.new-articles__item-header {
+  padding-top: 2rem;
+  font-size: 1.8rem;
+  color: hsl(36deg, 100%, 99%);
+}
+.new-articles__item-body {
+  padding-top: 1rem;
+  color: hsl(233deg, 8%, 79%);
+  font-size: 1.5rem;
+}
+
 /*# sourceMappingURL=styles.css.map */
